# archdatapy

./: .buildinfo  .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  archdatapy.html  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tutorial.html  tutorialnb.html
.github/workflows/: publish.yml  tests.yml
_modules/: index.html
_modules/archdatapy/: archdata.html
_sources/: archdatapy.rst.txt  index.rst.txt  tutorial.ipynb.txt
archdatapy/: __init__.py  archdata.py  datasets.json  package_registry.json
archdatapy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/docs/source/: conf.py
docs/source/: conf.py  tutorial.ipynb
doctrees/: environment.pickle
html/: searchindex.js
notebooks/: archdatapy_nb.ipynb  tutorialnb.ipynb
tests/: test_archdata.py
