[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archdatapy"
version = "1.1.1"
description = "A lightweight package to access R::archdata archaeological datasets in Python"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "W. Christopher Carleton", email = "ccarleton@protonmail.com"}
]
keywords = [
    "archaeology",
    "archdata",
    "datasets",
    "pandas",
    "r-data",
    "research-data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "requests",
    "pyreadr",
    "pandas",
]

[project.optional-dependencies]
test = [
    "pytest",
]
release = [
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/wccarleton/archdatapy"
Documentation = "https://wccarleton.github.io/archdatapy"
Repository = "https://github.com/wccarleton/archdatapy"
Issues = "https://github.com/wccarleton/archdatapy/issues"
Changelog = "https://github.com/wccarleton/archdatapy/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["archdatapy"]

[tool.setuptools.package-data]
archdatapy = ["*.json"]

[tool.setuptools.data-files]
"share/archdatapy/notebooks" = ["notebooks/*.ipynb"]
